fixed popup styles  on iphone/ipad

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -30,11 +30,13 @@
   display: none;
   position: relative;
   width: 16px;
+  padding: 0;
   height: 2px;
   border: none;
   background-color: #fff;
   margin-bottom: 4px;
   z-index: 10;
+  -webkit-transition: all 0.25s ease-in;
   transition: all 0.5s ease-in-out;
   cursor: pointer;
 }
@@ -45,8 +47,8 @@
   left: 0;
   width: 16px;
   height: 2px;
-  display: block;
   background-color: #fff;
+  -webkit-transition: all 0.25s ease-in;
   transition: all 0.25s ease-in;
 }
 .header__popup-button_dark {
